--- a/src/Cocorico/CoreBundle/Resources/config/Services/entities_manager.yml
+++ b/src/Cocorico/CoreBundle/Resources/config/Services/entities_manager.yml
@@ -19,6 +19,7 @@ services:
             - "%cocorico.listing_new_is_published%"
             - "%cocorico.dashboard_max_per_page%"
             - "@cocorico.mailer.twig_swift"
+            - "@service_container"
 
     #todo: Split it in muliple services
     cocorico.booking.manager:
