#21168 #21133 expires at, number of people

--- a/src/Cocorico/CoreBundle/Resources/config/Services/forms.yml
+++ b/src/Cocorico/CoreBundle/Resources/config/Services/forms.yml
@@ -266,3 +266,9 @@ services:
         tags:
             - { name: form.type, alias: listing_edit_max_bookings }
             
+
+    cocorico.form.type.listing_edit_expires_at:
+        class: Cocorico\CoreBundle\Form\Type\Dashboard\ListingEditExpiresAt
+        tags:
+            - { name: form.type, alias: listing_edit_expires_at }
+                        
